force-app/main/default/objects/Opportunity_Engagement_Signal__c/Opportunity_Engagement_Signal__c.object-meta.xml
<CustomObject>
    <label>Opportunity Engagement Signal</label>
    <nameField>
        <displayFormat>OES-{0000}</displayFormat>
        <label>Signal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Engagement Signals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>