force-app/main/default/objects/Opportunity_Engagement_Signal__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Signals</relationshipLabel>
    <relationshipName>Engagement_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>