force-app/main/default/objects/Opportunity_Engagement_Signal__c/fields/Dismissed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Dismissed_Reason__c</fullName>
    <label>Dismissed Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>