force-app/main/default/objects/Opportunity_Engagement_Signal__c/fields/Engagement_Touch__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Touch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Touch</label>
    <referenceTo>Engagement_Touch__c</referenceTo>
    <relationshipLabel>Engagement Signals</relationshipLabel>
    <relationshipName>Engagement_Signals</relationshipName>
    <type>Lookup</type>
</CustomField>